# bog

./: .gitignore  CLAUDE.md  Cargo.toml  MANIFESTO.md  README.md  bog.toml  bogbot.toml  dumb_human_readme.md  install.sh  repo.bog
.claude/skills/bog/: SKILL.md
.claude/skills/orchestrate/: SKILL.md
crates/bog-orchestrate/: Cargo.toml
crates/bog-orchestrate/src/: agent.rs  agent.rs.bog  context.rs  context.rs.bog  dock.rs  dock.rs.bog  error.rs  error.rs.bog  lib.rs  lib.rs.bog  main.rs  main.rs.bog  orchestrator.rs  orchestrator.rs.bog  permissions.rs  permissions.rs.bog  plan.rs  plan.rs.bog  prompt.rs  prompt.rs.bog  provider.rs  provider.rs.bog  skim.rs  skim.rs.bog  worktree.rs  worktree.rs.bog
crates/bog/src/: ast.rs  ast.rs.bog  cli.rs  cli.rs.bog  config.rs  config.rs.bog  health.rs.bog  stub.rs  (+8 more)
dogfooding/: INIT-BOG-ORCHESTRATE.md
src/: ast.rs  ast.rs.bog  cli.rs  cli.rs.bog  config.rs  config.rs.bog  context.rs  context.rs.bog  health.rs  health.rs.bog  integration.rs  integration.rs.bog  lib.rs  lib.rs.bog  main.rs  main.rs.bog  parser.pest  parser.rs  parser.rs.bog  stub.rs  stub.rs.bog  treesitter.rs  treesitter.rs.bog  validator.rs  validator.rs.bog
src/orchestrate/: agent.rs  agent.rs.bog  context.rs  context.rs.bog  dock.rs  dock.rs.bog  error.rs  mod.rs.bog  orchestrator.rs  orchestrator.rs.bog  permissions.rs  permissions.rs.bog  plan.rs  plan.rs.bog  prompt.rs  prompt.rs.bog  provider.rs  provider.rs.bog  skim.rs  skim.rs.bog  worktree.rs  worktree.rs.bog
tests/: integration.rs  integration.rs.bog
tests/fixtures/: bogbot.toml  repo.bog
(+5 files in other folders)
