[package]
name = "bog"
version = "0.1.0"
edition = "2024"

[dependencies]
pest = "2"
pest_derive = "2"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
colored = "2"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
