[package]
name = "bog-orchestrate"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bog-orchestrate"
path = "src/main.rs"

[dependencies]
bog = { path = "../bog" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
glob = "0.3"
colored = "2"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
